html css 50% done

--- a/index.html
+++ b/index.html
@@ -5,14 +5,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- css stylesheet -->
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 
 <body>
     <div class="container">
         <h1>Simple Interest Calculator</h1>
+        <form>
+            <label for="amount">Amount</label>
+            <input type="number"><br><br>
+            <label for="intrest">Interest Rate</label>
+            <input type="range" min="0" max="100">
+            <br><br>
+            <label for="years">No.of Years</label>
+            <input type="number" min="1">
+            <br><br>
+            <button>Compute Intrest</button>
+
+        </form>
+
+        <p>&copy; Everyone Can Get Rich</p>
+
 
     </div>
+
+
+
+
+    <!-- javascript -->
+    <script src="script.js"></script>
 </body>
 
 </html>
