--- a/index.html
+++ b/index.html
@@ -15,19 +15,38 @@
         <h1>Simple Interest Calculator</h1>
         <form>
             <label for="amount">Amount</label>
-            <input type="number"><br><br>
+            <input id="amount" type="number"><br><br>
             <label for="intrest">Interest Rate</label>
-            <input type="range" min="0" max="100">
+            <input type="range" step="0.1" min="0.1" max="50" id="myrange">
+            <span id="demo"></span><span>%</span>
             <br><br>
-            <label for="years">No.of Years</label>
-            <input type="number" min="1">
+            <label for="years">No. of Years</label>
+            <select id="yearterm">
+                <option disabled selected value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="6">7</option>
+                <option value="6">8</option>
+                <option value="6">9</option>
+                <option value="6">10</option>
+            </select>
             <br><br>
-            <button>Compute Intrest</button>
+            <button type="submit" id="submit">Compute Intrest</button>
 
         </form>
+        <!--calculator end-->
+        <div id="totalInt">
+            <p id="siOutput-1"></p>
+            <p id="siOutput-2"></p>
+            <p id="siOutput-3"></p>
+            <p id="siOutput-4"></p>
+        </div>
+        <!--totalTip end-->
 
-        <p>&copy; Everyone Can Get Rich</p>
-
+        <p id="copy">&copy; Everyone Can Get Rich</p>
 
     </div>
 
