add span tag to fix the color issue in the output massage function

--- a/index.html
+++ b/index.html
@@ -39,10 +39,19 @@
         </form>
         <!--calculator end-->
         <div id="totalInt">
-            <p id="siOutput-1"></p>
+            <span id="siOutput-1"></span>
+            <span id="siOutput-11"></span><br>
+            <span id="siOutput-2"></span>
+            <span id="siOutput-21"></span><br>
+            <span id="siOutput-3"></span>
+            <span id="siOutput-31"></span><br>
+            <span id="siOutput-4"></span>
+            <span id="siOutput-41"></span>
+            <!-- <p id="siOutput-1"></p>
             <p id="siOutput-2"></p>
             <p id="siOutput-3"></p>
-            <p id="siOutput-4"></p>
+            <p id="siOutput-4"></p> -->
+
         </div>
         <!--totalTip end-->
 
