button posstion changed

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <option value="6">10</option>
             </select>
             <br><br>
-            <button type="submit" id="submit">Compute Intrest</button>
+            <button type="submit" id="submit">Compute Interest</button>
 
         </form>
         <!--calculator end-->
