cleared unwanted codes

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <p id="siOutput-4"></p>
 
         </div>
-        <!--totalTip end-->
+        <!--totalInt end-->
 
 
         <footer>
